--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excursion</title>
-    <link rel="stylesheet" href="resources/css/style.css" type="test/css">
+    <link rel="stylesheet" href="resources/css/style.css" type="text/css">
     </head>
 <body>
     <h1>Discover hidden places in the world around you.</h1>
