--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
     <h2 class="header--secondary">Your personal travel guide</h2>
 
     <h4 class="header--sub-header">Excursion remebers places you like, and recommends new points of interest around you.</h4>
+    <p><img src="resources/images/camp.jpg" alt="pic of tent"></p>
+    <p><img src="resources/images/phone.png" alt="pic of phone"></p>
+    <h4 class="header--sub-header">Coming Soon for Iphone and Android.</h4>
+    <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
 </body>
 </html>
